Fixes wrapping of description in webapp style.

--- a/hw01/webapp/static/query_results.css
+++ b/hw01/webapp/static/query_results.css
@@ -69,7 +69,7 @@ body {
   margin-bottom: 25px;
 }
 
-.r_title, .r_author, .r_url, .r_description {
+.r_title, .r_author, .r_url {
   white-space: nowrap;
 }
 
